Add Managed Blockchain and Lake Formation resources

--- a/index.html
+++ b/index.html
@@ -318,6 +318,15 @@
                             <li><a href="#section-robotics-robomaker"><span class="lbl">RoboMaker</span></a></li>
                         </ul>
                     </li>
+                    <li class="gold with-sub" data-category="blockchain">
+                        <span>
+                            <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Blockchain_light-bg.png" style="width: 16px; height: 16px;" /></i>
+                            <span class="lbl">Blockchain</span>
+                        </span>
+                        <ul>
+                            <li><a href="#section-blockchain-managedblockchain"><span class="lbl">Managed Blockchain</span></a></li>
+                        </ul>
+                    </li>
                     <li class="pink with-sub" data-category="managementandgovernance">
                         <span>
                             <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Management-and-Governance_light-bg.png" style="width: 16px; height: 16px;" /></i>
@@ -369,6 +378,7 @@
                             <li><a href="#section-analytics-quicksight"><span class="lbl">QuickSight</span></a></li>
                             <li><a href="#section-analytics-datapipeline"><span class="lbl">Data Pipeline</span></a></li>
                             <li><a href="#section-analytics-glue"><span class="lbl">Glue</span></a></li>
+                            <li><a href="#section-analytics-lakeformation"><span class="lbl">Lake Formation</span></a></li>
                             <li><a href="#section-analytics-msk"><span class="lbl">MSK</span></a></li>
                         </ul>
                     </li>
@@ -651,6 +661,18 @@
                                         </table>
                                         <table style="border: none; margin-bottom: 16px;">
                                             <tr>
+                                                <td><img src="img/aws/Blockchain_light-bg.png" style="width: 48px; height: 48px;" /></td>
+                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Blockchain</h4></td>
+                                            </tr>
+                                            <tr>
+                                                <td>&nbsp;</td>
+                                                <td style="padding-left: 12px;">
+                                                    <a href="#section-blockchain-managedblockchain" style="font-weight: 600;">Managed Blockchain</a>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <table style="border: none; margin-bottom: 16px;">
+                                            <tr>
                                                 <td><img src="img/aws/Management-and-Governance_light-bg.png" style="width: 48px; height: 48px;" /></td>
                                                 <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Management &amp; Governance</h4></td>
                                             </tr>
@@ -711,6 +733,7 @@
                                                     <a href="#section-analytics-quicksight" style="font-weight: 600;">QuickSight</a><br />
                                                     <a href="#section-analytics-datapipeline" style="font-weight: 600;">Data Pipeline</a><br />
                                                     <a href="#section-analytics-glue" style="font-weight: 600;">Glue</a><br />
+                                                    <a href="#section-analytics-lakeformation" style="font-weight: 600;">Lake Formation</a><br />
                                                     <a href="#section-analytics-msk" style="font-weight: 600;">MSK</a>
                                                 </td>
                                             </tr>
@@ -1134,7 +1157,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="aws-sdk-2.493.0.min.js"></script>
+        <script src="aws-sdk-2.507.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/mappings.js"></script>
