--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
                             <li><a href="#section-database-elasticache"><span class="lbl">ElastiCache</span></a></li>
                             <li><a href="#section-database-neptune"><span class="lbl">Neptune</span></a></li>
                             <li><a href="#section-database-redshift"><span class="lbl">Redshift</span></a></li>
+                            <li><a href="#section-database-qldb"><span class="lbl">QLDB</span></a></li>
                             <li><a href="#section-database-documentdb"><span class="lbl">DocumentDB</span></a></li>
                         </ul>
                     </li>
@@ -591,6 +592,7 @@
                                                     <a href="#section-database-elasticache" style="font-weight: 600;">ElastiCache</a><br />
                                                     <a href="#section-database-neptune" style="font-weight: 600;">Neptune</a><br />
                                                     <a href="#section-database-redshift" style="font-weight: 600;">Redshift</a><br />
+                                                    <a href="#section-database-qldb" style="font-weight: 600;">QLDB</a><br />
                                                     <a href="#section-database-documentdb" style="font-weight: 600;">DocumentDB</a>
                                                 </td>
                                             </tr>
@@ -1157,7 +1159,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="aws-sdk-2.507.0.min.js"></script>
+        <script src="aws-sdk-2.528.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/mappings.js"></script>
