--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
                         <ul>
                             <li><a href="#section-migrationandtransfer-databasemigrationservice"><span class="lbl">Database Migration Service</span></a></li>
                             <li><a href="#section-migrationandtransfer-transfer"><span class="lbl">Transfer</span></a></li>
+                            <li><a href="#section-migrationandtransfer-datasync"><span class="lbl">DataSync</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub" data-category="networkingandcontentdelivery">
@@ -606,7 +607,8 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-migrationandtransfer-databasemigrationservice" style="font-weight: 600;">Database Migration Service</a><br />
-                                                    <a href="#section-migrationandtransfer-transfer" style="font-weight: 600;">Transfer</a>
+                                                    <a href="#section-migrationandtransfer-transfer" style="font-weight: 600;">Transfer</a><br />
+                                                    <a href="#section-migrationandtransfer-datasync" style="font-weight: 600;">DataSync</a>
                                                 </td>
                                             </tr>
                                         </table>
