--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
                             <li><a href="#section-storage-efs"><span class="lbl">EFS</span></a></li>
                             <li><a href="#section-storage-fsx"><span class="lbl">FSx</span></a></li>
                             <li><a href="#section-storage-glacier"><span class="lbl">Glacier</span></a></li>
+                            <li><a href="#section-storage-storagegateway"><span class="lbl">Storage Gateway</span></a></li>
                             <li><a href="#section-storage-backup"><span class="lbl">Backup</span></a></li>
                         </ul>
                     </li>
@@ -576,6 +577,7 @@
                                                     <a href="#section-storage-efs" style="font-weight: 600;">EFS</a><br />
                                                     <a href="#section-storage-fsx" style="font-weight: 600;">FSx</a><br />
                                                     <a href="#section-storage-glacier" style="font-weight: 600;">Glacier</a><br />
+                                                    <a href="#section-storage-storagegateway" style="font-weight: 600;">Storage Gateway</a><br />
                                                     <a href="#section-storage-backup" style="font-weight: 600;">Backup</a>
                                                 </td>
                                             </tr>
