Minor tweaks to parameter expand and site links

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Former2</title>
 
-        <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-        <link rel="manifest" href="/img/site.webmanifest">
-        <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+        <link rel="manifest" href="img/site.webmanifest">
+        <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
-        <link href="/favicon.ico" rel="shortcut icon">
+        <link href="favicon.ico" rel="shortcut icon">
         <meta name="description" content="Convert your existing cloud resources into CloudFormation / Terraform / Troposphere" />
         <meta property="og:title" content="Former2" />
         <meta property="og:description" content="Convert your existing cloud resources into CloudFormation / Terraform / Troposphere" />
@@ -1041,7 +1041,7 @@
                                             </fieldset>
                                         </div>
                                         <div class="col-lg-12">
-                                            <small><a id="add-parameter-expand-link" href="#section-setup-parameters">[+] Advanced Settings<br /><br /></a></small>
+                                            <small><a id="add-parameter-expand-link" href="#section-setup-parameters">[+] Advanced Settings</a><br /><br /></small>
                                         </div>
                                     </div>
                                     <div id="add-parameter-expand-section" style="display: none;">
