Added IAM importable resources

--- a/index.html
+++ b/index.html
@@ -1000,8 +1000,8 @@
                             </div>
                             <div class="col-md-4">
                                 <p style="text-align: center;">
-                                    <br /><br />
-                                    You will need an IAM key pair to authenticate your requests. It is recommended that you provide only read access with these credentials and suggest you assign the <a href="https://console.aws.amazon.com/iam/home?#/policies/arn:aws:iam::aws:policy/ReadOnlyAccess" target="_blank">ReadOnlyAccess</a> policy.
+                                    <br />
+                                    You will need an IAM key pair to authenticate your requests. If you are not planning on importing resources directly, it is recommended that you provide only read access with these credentials and suggest you assign the <a href="https://console.aws.amazon.com/iam/home?#/policies/arn:aws:iam::aws:policy/ReadOnlyAccess" target="_blank">ReadOnlyAccess</a> policy. If you intend to use the Import feature, you should grant appropriate permissions to create the stack.
                                 </p>
                             </div>
                             <div class="col-md-1"></div>
